[package]
name = "one_billion_rows_challenge"
version = "0.1.0"
edition = "2024"
description = "One Billion Rows Challenge"
license = "MIT"
repository = "https://github.com/user/one_billion_rows_challenge"
readme = "README.md"
keywords = ["1brc", "challenge"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
memmap2 = "0.9.10"
rand = "0.10.0"
rand_distr = "0.6.0"
rustc-hash = "2.1.1"
